# qsipgaterpclib

./: CMakeLists.txt  QsipgateRpcConfig.cmake.in  QsipgateRpcConfigVersion.cmake.in  secure.sipgate.de.pem  testconfig.h.in
cmake/: FindQxt.cmake
src/: CMakeLists.txt  abstracthandler.cpp  abstracthandler.h  abstractrequest.cpp  abstractrequest.h  request.cpp  request.h  response.cpp  response.h  rpcclientfactory.cpp  rpcclientfactory.h  rpchandler.cpp  rpchandler.h  samuraiaccountstatementgetrequest.cpp  samuraiaccountstatementgetrequest.h  samuraiaccountstatementgetresponse.cpp  samuraiaccountstatementgetresponse.h  samuraibalancegetrequest.cpp  samuraibalancegetrequest.h  samuraibalancegetresponse.cpp  samuraibalancegetresponse.h  samuraiclientidentifyrequest.cpp  samuraiclientidentifyrequest.h  samuraiclientidentifyresponse.cpp  samuraiclientidentifyresponse.h  samuraieventlistgetrequest.cpp  samuraieventlistgetrequest.h  samuraieventlistgetresponse.cpp  samuraieventlistgetresponse.h  samuraihistorygetbydaterequest.cpp  samuraihistorygetbydaterequest.h  samuraihistorygetbydateresponse.cpp  samuraihistorygetbydateresponse.h  samuraiitemizedentriesgetrequest.cpp  samuraiitemizedentriesgetrequest.h  samuraiitemizedentriesgetresponse.cpp  samuraiitemizedentriesgetresponse.h  samuraiownurilistgetrequest.cpp  samuraiownurilistgetrequest.h  samuraiownurilistgetresponse.cpp  (+69 more)
tests/: CMakeLists.txt  abstracthandlertest.cpp  abstracthandlertest.h  abstractrequesttest.cpp  abstractrequesttest.h  maintest.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mockabstracthandler.h  mockabstractrequest.h  output.cpp  output.h  requesttest.cpp  responsetest.cpp  rpcclientfactorytest.cpp  rpcclientfactorytest.h  rpchandlertest.cpp  rpchandlertest.h  samuraiaccountstatementgetrequesttest.cpp  samuraiaccountstatementgetresponsetest.cpp  samuraibalancegetrequesttest.cpp  samuraibalancegetresponsetest.cpp  samuraiclientidentifyrequesttest.cpp  samuraiclientidentifyresponsetest.cpp  samuraieventlistgetrequesttest.cpp  samuraieventlistgetresponsetest.cpp  samuraihistorygetbydaterequesttest.cpp  samuraihistorygetbydateresponsetest.cpp  samuraiitemizedentriesgetrequesttest.cpp  samuraiownurilistgetrequesttest.cpp  samuraiownurilistgetresponsetest.cpp  samuraiphonebookentrygetrequesttest.cpp  samuraiphonebookentrygetresponsetest.cpp  samuraiphonebooklistgetrequesttest.cpp  samuraiphonebooklistgetresponsetest.cpp  samurairecommendedintervalgetrequesttest.cpp  samurairecommendedintervalgetresponsetest.cpp  samuraiserverdatagetrequesttest.cpp  samuraiserverdatagetresponsetest.cpp  (+29 more)
